--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,3 +171,101 @@ img {
   border-top: 8px solid #66D9EB;
 
 }
+
+/* Price */
+.price {
+  background: #F7F7F7;
+  padding: 60px;
+}
+
+.price-container {
+  max-width: 960px;
+  margin: 0 auto;
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+.price-item {
+  flex: 1 1 260px;
+  border: 4px solid #FFFFFF;
+  padding: 20px;
+  margin: 10px;
+}
+
+.price-item h2 {
+  font-size: 3em;
+  color: #A4A4A4;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.price-item span {
+  max-width: 300px;
+  margin: 20px auto;
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  padding: 10px 0 5px 0;
+  border-top: 4px solid #FFFFFF;
+  border-bottom: 4px solid #FFFFFF;
+  font-size: 3em;
+}
+
+.price-item sup {
+  font-size: 1.5rem;
+}
+
+.price-item ul {
+  max-width: 300px;
+  margin: 20px auto;
+  font-size: 1.25em;
+  font-style: italic;
+  color: #7C7C7C;
+}
+
+.price-item li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.price-item li::after {
+  content: '';
+  display: block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #2C70FF;
+}
+
+.price-item a {
+  max-width: 300px;
+  display: block;
+  margin: 20px auto;
+  border: 4px solid;
+  color: #222222;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 2.25em;
+  padding: 15px 0;
+  text-align: center;
+}
+
+/* Mobile */
+@media (max-width: 800px) {
+  .price {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .price .price-item:nth-child(3) {
+    order: -2;
+  }
+
+  .price .price-item:nth-child(2) {
+    order: -1;
+  }
+}
