--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,6 +299,81 @@ img {
   color: #7C7C7C;
 }
 
+/* Newsletter */
+.newsletter {
+  background: #F7F7F7;
+  padding: 60px calc((100% - 960px) / 2);
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-info {
+  flex: 1 1 240px;
+  margin: 0 10px;
+}
+
+.newsletter-info h1 {
+  font-size: 3em;
+  color: #A4A4A4;
+}
+
+.newsletter-info P {
+  font-size: 1.25em;
+  font-style: italic;
+  max-width: 230px;
+  color: #7c7c7c;
+  margin-bottom: 10px;
+}
+
+.newsletter-form {
+  flex: 2 1 260px;
+  margin: 0 10px;
+  align-self: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-form input {
+  flex: 3 1 200px;
+  font-size: 1.25em;
+  color: #7c7c7c;
+  font-style: italic;
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  border: 4px solid #2C70FF;
+  background: transparent;
+  padding: 10px;
+  margin: 0px;
+  border-radius: 0px;
+}
+
+.newsletter-form button {
+  flex: 1 1 200px;
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  font-size: 2.25em;
+  font-weight: bold;
+  text-transform: uppercase;
+  background: #2C70FF;
+  color: #FFFFFF;
+  margin: 0;
+  cursor: pointer;
+  border: none;
+}
+
+/* Footer */
+.footer {
+  display: flex;
+  background: #2C70FF;
+  height: 100px;
+  align-items: center;
+}
+
+.footer p {
+  flex: 1;
+  text-align: center;
+  font-size: 2em;
+  color: #122AB2;
+}
+
 /* Mobile */
 @media (max-width: 800px) {
   .price {
